overflows fixed

--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -4,7 +4,7 @@
   display: grid;
   justify-content: center;
   background-color: $grey-light;
-
+ /*  overflow-x: hidden; */
 
   @include grid-mobile;
   @include grid-tablet;
@@ -142,7 +142,7 @@
   position: absolute;
 left: 0;
 z-index: 0;
-width: 100vw;
+width:100%;
 
 @include mobile {
   top: 4930px;
