--- a/src/styles/blocks/root.scss
+++ b/src/styles/blocks/root.scss
@@ -6,7 +6,7 @@
   margin: 0 auto;
   justify-content: center;
 
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 background-color: aqua;
 
 &__lock {
